@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: October 22, 2008</p>
+      <p>Last Updated: October 23, 2008</p>
     </td>
   </tr>
 </table>
@@ -1140,6 +1140,7 @@ nuttx-0.3.17 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* FAT: Fix access to unaligned 32-bit values in partion table (start sector &amp; size)
 	* Fixed a problem with a un-initialized variable in the USB serial driver.
 	* Added USB storage NXP LPC214x configuration
+	* Added a test for USB storage under examples/usbstorage
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
